@@ -1928,6 +1928,9 @@ restore_sourceheader=Source and format
 restore_headerfeatures=Features and settings
 restore_headeropts=Other restore options
 restore_allfeatures=Restore all features
+restore_checkmode=Checking restored PHP execution mode ..
+restore_okmode=.. mode $1 OK for this system
+restore_badmode=.. mode $1 cannot be used, switching to $2. 
 
 limits_title=Server Owner Limits
 limits_header=Virtualmin limits for server owner
@@ -3500,6 +3503,9 @@ phpmode_mode=PHP script execution mode
 phpmode_mod_php=Apache <tt>mod_php</tt> (run as Apache's user)
 phpmode_cgi=CGI wrapper (run as virtual server owner)
 phpmode_fcgid=FCGId (run as virtual server owner)
+phpmode_short_mod_php=Apache <tt>mod_php</tt>
+phpmode_short_cgi=CGI wrapper
+phpmode_short_fcgid=FCGId
 phpmode_err=Failed to save website options
 phpmode_suexec=Run CGI scripts as domain owner?
 phpmode_esuexec=The <b>CGI wrapper</b> option cannot be selected unless <b>Run CGI scripts as domain owner</b> is
